n-vm-macros/tests/compile_fail/non_unit_return.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::in_vm]
fn non_unit_return() -> i32 {
    42
}

fn main() {}