n-vm-macros/tests/compile_fail/non_unit_return.stderr
error: #[in_vm] functions must return `()`; the generated dispatch branches use bare `return;` statements
 --> tests/compile_fail/non_unit_return.rs:5:22
  |
5 | fn non_unit_return() -> i32 {
  |                      ^^^^^^
